<resources>
    <string name="app_name">SpaceX</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SpaceX project info</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="menu_all_launches">Launches</string>
    <string name="menu_past_launches">Past Launches</string>
    <string name="menu_upcoming_launches">Upcoming Launches</string>

    <string name="preferences">preferences</string>
    <string name="filters_preferences">filter_preferences</string>
    <string name="cache_first_preferences">cache_first_preferences</string>
    <string name="launches_type_bundle">launches type</string>
    <string name="launch_detail_bundle">launch detail</string>

    <string name="no_internet">No internet connection</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="no_info">No information provided.</string>

    <string name="launch_vehicle">Vehicle:</string>
    <string name="launch_time">Time:</string>
    <string name="launch_location">Location:</string>
    <string name="launch_image">Launch image</string>
    <string name="launch_details">Details:</string>

    <string name="filters"><u>Filters</u></string>
    <string name="sort_by_date">Sort by rocket name</string>
    <string name="sort_by_mission_name">Sort by mission name</string>
    <string name="data_from_cache_first">Show data from cache first</string>
</resources>
