<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/anv_all_launches">

    <fragment
        android:id="@+id/anv_all_launches"
        android:name="com.zubak.spacex.ui.launches.LaunchesFragment"
        android:label="@string/menu_all_launches"
        tools:layout="@layout/fragment_launches" />

    <fragment
        android:id="@+id/nav_past_launches"
        android:name="com.zubak.spacex.ui.launches.LaunchesFragment"
        android:label="@string/menu_past_launches"
        tools:layout="@layout/fragment_launches" />

    <fragment
        android:id="@+id/nav_upcoming_launches"
        android:name="com.zubak.spacex.ui.launches.LaunchesFragment"
        android:label="@string/menu_upcoming_launches"
        tools:layout="@layout/fragment_launches" />
</navigation>
