<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/widget_compact_card_frame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="8dp"
    android:background="@drawable/card_shape"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/TitleCard"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/widget_categoryIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_margin="8dp"
            android:src="@mipmap/rocket" />

        <TextView
            android:id="@+id/widget_launch_mission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:gravity="start"
            android:maxLines="2"
            android:paddingTop="8dp"
            android:textColor="?android:attr/textColorPrimaryInverse"
            android:textSize="24sp"
            android:textStyle="normal"
            tool:text="Mission Name" />
    </LinearLayout>

    <ImageView
        android:id="@+id/image_launch"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/launch_image" />

    <TextView
        android:id="@+id/widget_launch_rocket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="2"
        android:paddingTop="4dp"
        android:singleLine="false"
        android:textColor="?android:attr/textColorSecondaryInverse"
        android:textSize="18sp"
        tool:text="@string/launch_vehicle" />

    <TextView
        android:id="@+id/widget_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="3"
        android:padding="2dp"
        android:singleLine="false"
        android:textColor="?android:attr/textColorSecondaryInverse"
        android:textSize="18sp"
        tool:text="@string/launch_location" />

    <TextView
        android:id="@+id/widget_launch_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="8dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="1"
        android:padding="2dp"
        android:singleLine="false"
        android:textColor="?android:attr/textColorSecondaryInverse"
        android:textSize="18sp"
        tool:text="@string/launch_time" />
</LinearLayout>
